[project]
name = "cyber-security-env"
version = "1.0.0"
description = "Cyber Security Defense OpenEnv Environment"
authors = [{ name = "Aditi Singh" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openai>=2.7.2",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "numpy==1.26.4",
    "pillow==10.3.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"